--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+[Ll]ogs/
+[Mm]emoryCaptures/
+[Uu]serSettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -57,4 +58,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
+Quiet Happiness/UserSettings/Layouts/default-2021.dwlt
+Quiet Happiness/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
